--- a/pkg/unvanquished_src.dpkdir/configs/buildables/repeater.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/repeater.attr.cfg
@@ -1,5 +1,5 @@
 humanName "Repeater"
-description "A power distributor that transmits power from the reactor to remote locations, so that bases may be built far from the reactor."
+description "Increases the power capacity of an area, so that more buildables can be built there. Deals severe damage to close structures if it explodes."
 team humans
 
 //Parameters for its build
@@ -17,11 +17,11 @@ usable
 transparentTest
 
 //Parameters for its explosion
-splashDamage 250
+splashDamage 230
 splashRadius 250
 meansOfDeath humanBuildable
 
 //How much is awarded when it is killed
-reward 15
+reward 12
 
 radarFadeOut 0.0
