--- a/main/configs/buildables/telenode.attr.cfg
+++ b/main/configs/buildables/telenode.attr.cfg
@@ -10,6 +10,7 @@ buildWeapon human
 
 //Where can we build it
 minNormal 0.95
+powerConsumption 10 // telenode causes interference but never powers down
 
 health 310
 
