Move all datasources into their owns struct: rocketInfo.data. Also, add mapInfo parsing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -701,6 +701,7 @@ set( CGAMEGPP_BASE
   ${GPP_DIR}/cgame/cg_rocket_dataformatter.c
   ${GPP_DIR}/cgame/cg_rocket_elementdimensions.c
   ${GPP_DIR}/cgame/cg_utils.c
+  ${GPP_DIR}/cgame/cg_gameinfo.c
   ${GPP_DIR}/ui/ui_shared.c
   ${GPP_DIR}/ui/ui_utf8.c
   ${SHAREDLIST}
