--- a/download-pk3.sh.in
+++ b/download-pk3.sh.in
@@ -14,6 +14,8 @@ set -e
 
 # Download from here
 BASE_URL='http://downloads.sourceforge.net/project/unvanquished/Assets/'
+MIRROR_DOMAIN='dl.sourceforge.net'
+MIRROR_URL="http://%s.$MIRROR_DOMAIN/project/unvanquished/Assets/"
 
 # Default destination directory
 case "$(uname -s)" in
@@ -41,6 +43,13 @@ while test -z "$DONE"; do
       echo "Options:"
       echo "  -v, --verify     Verify downloaded .pk3s"
       echo "  --source MIRROR  Download from MIRROR"
+      echo
+      echo "Mirror URL examples (not real URLs!):"
+      echo "  http://example.com/unvanquished/"
+      echo "    -> full URL"
+      echo "  example"
+      echo "    -> $(printf "$MIRROR_URL" example)"
+
       exit 0
       ;;
 
@@ -53,6 +62,10 @@ while test -z "$DONE"; do
       shift
       BASE_URL="$1"
       shift
+      # Single word? Expand it
+      if echo "$BASE_URL" | grep -q '[./]'; then
+        BASE_URL="$(printf "$MIRROR_URL" "$1")"
+      fi
       ;;
 
     *)
