--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if( WIN32 OR MSVC OR CMAKE_SYSTEM_PROCESSOR MATCHES "i.86" OR CMAKE_SYSTEM_PROCE
 endif()
 
 set( MOUNT_DIR ${CMAKE_SOURCE_DIR}/src )
+set( OBJ_DIR ${CMAKE_BINARY_DIR}/CMakeFiles )
 
 # Check if this is first run and if so set some default flags
 if( NOT DEFINED SUBSEQUENT_RUN )
@@ -154,8 +155,8 @@ if( GAME_LIB_LLVM )
 
   include( ${CMAKE_SOURCE_DIR}/cmake/CMakeLLVMInformation.cmake )
   include( ${CMAKE_SOURCE_DIR}/cmake/CMakeLLVMXXInformation.cmake )
-  file( WRITE ${Daemon_BINARY_DIR}/CMakeFiles/CMakeLLVMCompiler.cmake )
-  file( WRITE ${Daemon_BINARY_DIR}/CMakeFiles/CMakeLLVMXXCompiler.cmake )
+  file( WRITE ${OBJ_DIR}/CMakeLLVMCompiler.cmake )
+  file( WRITE ${OBJ_DIR}/CMakeLLVMXXCompiler.cmake )
   enable_language( LLVM )
   enable_language( LLVMXX )
   message( STATUS "Using LLVM" )
@@ -243,38 +244,38 @@ if( USE_GIT_DESCRIBE )
   set( GIT_DESCRIBE ${GIT_DESCRIBE_REPORT} CACHE INTERNAL "commit id reported by Git" FORCE )
 endif()
 
-if( EXISTS "${CMAKE_BINARY_DIR}/CMakeFiles/revision.h" )
-  file( READ "${CMAKE_BINARY_DIR}/CMakeFiles/revision.h" ACTUAL_REVISION_H_CONTENTS )
+if( EXISTS "${OBJ_DIR}/revision.h" )
+  file( READ "${OBJ_DIR}/revision.h" ACTUAL_REVISION_H_CONTENTS )
   if( NOT "${ACTUAL_REVISION_H_CONTENTS}" STREQUAL "${DESIRED_REVISION_H_CONTENTS}" )
-    file( WRITE "${CMAKE_BINARY_DIR}/CMakeFiles/revision.h" "${DESIRED_REVISION_H_CONTENTS}" )
+    file( WRITE "${OBJ_DIR}/revision.h" "${DESIRED_REVISION_H_CONTENTS}" )
   endif()
 else()
-  file( WRITE "${CMAKE_BINARY_DIR}/CMakeFiles/revision.h" "${DESIRED_REVISION_H_CONTENTS}" )
+  file( WRITE "${OBJ_DIR}/revision.h" "${DESIRED_REVISION_H_CONTENTS}" )
 endif()
 
-include_directories( "${CMAKE_BINARY_DIR}/CMakeFiles" )
+include_directories( "${OBJ_DIR}" )
 
 # Import CMakeLists.txt for internal libraries
 if( USE_INTERNAL_SDL )
-  add_subdirectory( ${SDL_DIR} )
+  add_subdirectory( ${SDL_DIR} ${OBJ_DIR}/libsdl )
   set( SDL_LIBRARY INTERNAL_SDL INTERNAL_SDLMain CACHE STRING "SDL library" FORCE )
   set( SDL_INCLUDE_DIR ${SDL_DIR}/include CACHE STRING "SDL include directory" FORCE )
 endif()
 
 if( USE_INTERNAL_JPEG )
-  add_subdirectory( ${JPEG_DIR} )
+  add_subdirectory( ${JPEG_DIR} ${OBJ_DIR}/libjpeg )
   set( JPEG_LIBRARY INTERNAL_JPEG CACHE STRING "JPEG library" FORCE )
   set( JPEG_INCLUDE_DIR ${JPEG_DIR} CACHE STRING "JPEG include directory" FORCE )
 endif()
 
 if( USE_INTERNAL_GLEW )
-  add_subdirectory( ${GLEW_DIR} )
+  add_subdirectory( ${GLEW_DIR} ${OBJ_DIR}/libglew )
   set( GLEW_LIBRARY INTERNAL_GLEW CACHE STRING "Glew library" FORCE )
   set( GLEW_INCLUDE_DIR ${GLEW_DIR}/include CACHE STRING "Glew include directory" FORCE )
 endif()
 
 if( USE_INTERNAL_WEBP )
-  add_subdirectory( ${WEBP_DIR} )
+  add_subdirectory( ${WEBP_DIR} ${OBJ_DIR}/libwebp )
   set( WEBP_LIBRARY INTERNAL_WEBP CACHE STRING "WebP library" FORCE )
   set( WEBP_INCLUDE_DIR ${WEBP_DIR} CACHE STRING "WebP include directory" FORCE )
 endif()
@@ -987,7 +988,7 @@ set( Q3RCC_LIST
   ${MOUNT_DIR}/tools/lcc/src/trace.c
   ${MOUNT_DIR}/tools/lcc/src/tree.c
   ${MOUNT_DIR}/tools/lcc/src/types.c
-  ${CMAKE_BINARY_DIR}/CMakeFiles/dagcheck.c
+  ${OBJ_DIR}/dagcheck.c
 )
 
 set( Q3CPP_LIST
@@ -1172,7 +1173,7 @@ function( GAMELIB )
   endif()
 
   if( GAME_QVM AND GAMELIB_QVM_FILES )
-    set( QVM_DIR ${CMAKE_BINARY_DIR}/CMakeFiles/${GAMELIB_LIB_NAME}-qvm.dir )
+    set( QVM_DIR ${OBJ_DIR}/${GAMELIB_LIB_NAME}-qvm.dir )
     set( QVM_CPP_OPTIONS
       -I"${MOUNT_DIR}/gamelogic/game"
       -I"${MOUNT_DIR}/engine/qcommon"
@@ -1360,7 +1361,7 @@ endif()
 ########################
 
 if( USE_GLSL_OPTIMIZER )
-  add_subdirectory( ${LIB_DIR}/glsl-optimizer )
+  add_subdirectory( ${LIB_DIR}/glsl-optimizer ${OBJ_DIR}/glsl )
 endif()
 
 ###############
