--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: unvanquished
 Section: contrib/games
 Priority: extra
 Maintainer: Darren Salt <devspam@moreofthesa.me.uk>
-Build-Depends: debhelper (>= 8.0.0), cmake,
+Build-Depends: debhelper (>= 8.0.0), g++ (>= 4.7) | g++-4.7, cmake,
 	libcurl4-gnutls-dev,
 	libfreetype6-dev,
 	libglew-dev | libglew1.6-dev | libglew1.5-dev,
