Tell travis not to do builds on some branches.
In the case of engine-upgrade, this can be reverted once travis uses
new-enough gcc & clang.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,8 @@ notifications:
   irc: "irc.freenode.org#unvanquished-dev"
   on_success: change
   on_failure: always
+
+branches:
+  except:
+    - debian
+    - engine-upgrade
