--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
 notifications:
   irc: "irc.freenode.org#unvanquished-dev"
   on_success: change
-  on_failure: always
+  on_failure: change
