Add the Str namespace for convenience function on strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -542,6 +542,7 @@ endif()
 
 set( QCOMMONLIST
   ${MOUNT_DIR}/shared/Command.cpp
+  ${MOUNT_DIR}/shared/String.cpp
   ${MOUNT_DIR}/engine/framework/BaseCommands.cpp
   ${MOUNT_DIR}/engine/framework/CommandSystem.cpp
   ${MOUNT_DIR}/engine/qcommon/cm_load.c
