Rework MD5 buildable animation loading.
This loads a few extra animations.

"idle3" → "powerdown"
BANIM_IDLE3 → BANIM_POWERDOWN
  This is used for human buildables when power is lost.
  It is no longer looped.

"destroy2" → "destroy_unpowered"
BANIM_DESTROY2 → BANIM_DESTROY_UNPOWERED
  This is used when an unpowered buildable (human or alien) is destroyed.

--- a/main/models/buildables/overmind/animation.cfg
+++ b/main/models/buildables/overmind/animation.cfg
@@ -1,9 +1,9 @@
 //hivemind
-0   0   0   0    // CONSTRUCT1
-0   0   0   0    // CONSTRUCT1
 0   33  33  12   // IDLE1
 0   0   0   0    // IDLE2
-0   0   0   0    // IDLE3
+0   0   0   0    // POWERDOWN
+0   0   0   0    // CONSTRUCT1
+0   0   0   0    // CONSTRUCT1
 43  13  0   24   // ATTACK1
 0   0   0   0    // ATTACK2
 0   0   0   0    // SPAWN1
@@ -11,5 +11,5 @@
 34  9   0   18   // PAIN1
 0   0   0   0    // PAIN2
 56  13  0   12   // DESTROY1
-0   0   0   0    // DESTROY2
+0   0   0   0    // DESTROY_UNPOWERED
 69  1   1   1    // DESTROYED
