--- a/main/models/buildables/barricade/animation.cfg
+++ b/main/models/buildables/barricade/animation.cfg
@@ -1,9 +1,9 @@
 //barricade
-0   12  0   24    // CONSTRUCT1
-0   12  0   24    // CONSTRUCT1
 12  1   1   24    // IDLE1
 0   0   0   24    // IDLE2
-0   0   0   0     // IDLE3
+0   0   0   0     // POWERDOWN
+0   12  0   24    // CONSTRUCT1
+0   12  0   24    // CONSTRUCT1
 39  9   0   48    // ATTACK1 (shrink)
 39 -9   0   48    // ATTACK2 (unshrink)
 0   0   0   0     // SPAWN1
@@ -11,7 +11,7 @@
 12  12  0   24    // PAIN1
 48  1   0   24    // PAIN2
 36  12  0   24    // DESTROY
-0   0   0   0     // DESTROY2
+0   0   0   0     // DESTROY_UNPOWERED
 48  1   1   1     // DEAD
 
 //12 frames for each pain, 6 going down 6 going up
