--- a/main/models/buildables/reactor/animation.cfg
+++ b/main/models/buildables/reactor/animation.cfg
@@ -1,9 +1,9 @@
 //reactor
-0   12  0   24    // CONSTRUCT1
-0   12  0   12    // CONSTRUCT2
 12  24  24  20    // IDLE1
 0   0   0   0     // IDLE2
-0   0   0   0     // IDLE3
+0   0   0   0     // POWERDOWN
+0   12  0   24    // CONSTRUCT1
+0   12  0   12    // CONSTRUCT2
 0   0   0   0     // ATTACK1
 0   0   0   0     // ATTACK2
 0   0   0   0     // SPAWN1
@@ -11,5 +11,5 @@
 0   0   0   0     // PAIN1
 0   0   0   0     // PAIN2
 36  12  0   12    // DESTROY1
-36  12  0   12    // DESTROY2
+36  12  0   12    // DESTROY_UNPOWERED
 48  1   1   1     // DESTROYED1
