--- a/main/models/buildables/repeater/animation.cfg
+++ b/main/models/buildables/repeater/animation.cfg
@@ -1,9 +1,9 @@
 //repeater
-0   12  0   24    // CONSTRUCT1
-0   12  0   24    // CONSTRUCT1
 12  24  24  36    // IDLE1
 0   0   0   0     // IDLE2
-12  24  24  6     // IDLE3-NOPOWER
+12  24  24  6     // POWERDOWN
+0   12  0   24    // CONSTRUCT1
+0   12  0   24    // CONSTRUCT1
 0   0   0   0     // ATTACK1
 0   0   0   0     // ATTACK2
 0   0   0   0     // SPAWN1
@@ -11,5 +11,5 @@
 0   0   0   0     // PAIN1
 0   0   0   0     // PAIN2
 37  1   0   5     // DESTROY
-0   0   0   0     // DESTROY2
+0   0   0   0     // DESTROY_UNPOWERED
 37  1   1   1     // DEAD
