--- a/main/models/buildables/telenode/animation.cfg
+++ b/main/models/buildables/telenode/animation.cfg
@@ -1,9 +1,9 @@
 //telenode
-0   6   0   24    // CONSTRUCT1
-0   6   0   24    // CONSTRUCT2
 6   1   1   1     // IDLE1
 0   0   0   0     // IDLE2
-0   0   0   0     // IDLE3
+0   0   0   0     // POWERDOWN
+0   6   0   24    // CONSTRUCT1
+0   6   0   24    // CONSTRUCT2
 0   0   0   0     // ATTACK1
 0   0   0   0     // ATTACK2
 0   0   0   0     // SPAWN1
@@ -11,5 +11,5 @@
 0   0   0   0     // PAIN1
 0   0   0   0     // PAIN2
 6   5   0   24    // DESTROY1
-0   0   0   0     // DESTROY2
+0   0   0   0     // DESTROY_UNPOWERED
 11  1   1   1     // DEAD
