--- a/pkg/unvanquished_src.dpkdir/models/buildables/overmind/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/overmind/animation.cfg
@@ -1,9 +1,9 @@
 //hivemind
-0   0   0   0    // CONSTRUCT1
-0   0   0   0    // CONSTRUCT1
 0   33  33  12   // IDLE1
 0   0   0   0    // IDLE2
-0   0   0   0    // IDLE3
+0   0   0   0    // POWERDOWN
+0   0   0   0    // CONSTRUCT1
+0   0   0   0    // CONSTRUCT1
 43  13  0   24   // ATTACK1
 0   0   0   0    // ATTACK2
 0   0   0   0    // SPAWN1
@@ -11,5 +11,5 @@
 34  9   0   18   // PAIN1
 0   0   0   0    // PAIN2
 56  13  0   12   // DESTROY1
-0   0   0   0    // DESTROY2
+0   0   0   0    // DESTROY_UNPOWERED
 69  1   1   1    // DESTROYED
