--- a/pkg/unvanquished_src.dpkdir/models/buildables/trapper/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/trapper/animation.cfg
@@ -1,9 +1,9 @@
 // trapper
-41  13  0   24  // CONSTRUCT1
-41  13  0   24  // CONSTRUCT2
 0   33  33  24  // IDLE1
 0   0   0   0   // IDLE2
-0   0   0   0   // IDLE3
+0   0   0   0   // POWERDOWN
+41  13  0   24  // CONSTRUCT1
+41  13  0   24  // CONSTRUCT2
 33  8   0   8   // ATTACK1
 0   0   0   0   // ATTACK2
 0   0   0   0   // SPAWN1
@@ -11,7 +11,7 @@
 0   8   0   0   // PAIN1
 0   0   0   0   // PAIN2
 41  1   0   5   // DESTROY
-0   0   0   0   // DESTROY
+0   0   0   0   // DESTRO_UNPOWERED
 41  1   1   1   // DESTROYED
 
 
