--- a/pkg/unvanquished_src.dpkdir/sound/buildables/trapper/sound.cfg
+++ b/pkg/unvanquished_src.dpkdir/sound/buildables/trapper/sound.cfg
@@ -1,8 +1,8 @@
-0 0 //construct1.wav
-0 0 //construct2.wav
 0 0 //idle1.wav
 0 0 //idle2.wav
-0 0 //idle3.wav
+0 0 //powerdown.wav
+0 0 //construct1.wav
+0 0 //construct2.wav
 1 0 //attack1.wav
 0 0 //attack2.wav
 0 0 //spawn1.wav
