--- a/main/models/buildables/booster/animation.cfg
+++ b/main/models/buildables/booster/animation.cfg
@@ -2,6 +2,7 @@
 0   32  32  8    // IDLE1
 0   0   0   0    // IDLE2
 0   0   0   0    // POWERDOWN
+0   0   0   0    // IDLE_UNPOWERED
 0   0   0   0    // CONSTRUCT1
 0   0   0   0    // CONSTRUCT1
 0   0   0   0    // ATTACK1
