--- a/main/models/buildables/barricade/animation.cfg
+++ b/main/models/buildables/barricade/animation.cfg
@@ -2,6 +2,7 @@
 12  1   1   24    // IDLE1
 0   0   0   24    // IDLE2
 0   0   0   0     // POWERDOWN
+0   0   0   0     // IDLE_UNPOWERED
 0   12  0   24    // CONSTRUCT1
 0   12  0   24    // CONSTRUCT1
 39  9   0   48    // ATTACK1 (shrink)
