--- a/main/models/buildables/hive/animation.cfg
+++ b/main/models/buildables/hive/animation.cfg
@@ -2,6 +2,7 @@
 7    14     14	12		// IDLE1
 0   	0   	0  	24  		// IDLE2
 0   	0  	0     24          // POWERDOWN
+0   	0  	0     24          // IDLE_UNPOWERED
 0	7	0	24		// CONSTRUCT1
 0	7	0	24		// CONSTRUCT1
 7   	0   	0   	24   		// ATTACK1
