--- a/main/models/buildables/hovel/animation.cfg
+++ b/main/models/buildables/hovel/animation.cfg
@@ -2,6 +2,7 @@
 0   1   1   1     // IDLE1 Normal idle went built
 12  1   1   1     // IDLE2 Idle when occupied
 0   0   0   0     // POWERDOWN
+0   0   0   0     // IDLE_UNPOWERED
 0   1   0   1     // CONSTRUCT1
 0   1   0   1     // CONSTRUCT1
 1   11  0   24    // ATTACK1 The hovel opens and closes when used
