--- a/main/models/buildables/reactor/animation.cfg
+++ b/main/models/buildables/reactor/animation.cfg
@@ -2,6 +2,7 @@
 12  24  24  20    // IDLE1
 0   0   0   0     // IDLE2
 0   0   0   0     // POWERDOWN
+0   0   0   0     // IDLE_UNPOWERED
 0   12  0   24    // CONSTRUCT1
 0   12  0   12    // CONSTRUCT2
 0   0   0   0     // ATTACK1
