--- a/main/models/buildables/repeater/animation.cfg
+++ b/main/models/buildables/repeater/animation.cfg
@@ -2,6 +2,7 @@
 12  24  24  36    // IDLE1
 0   0   0   0     // IDLE2
 12  24  24  6     // POWERDOWN
+12  24  24  6     // IDLE_UNPOWERED
 0   12  0   24    // CONSTRUCT1
 0   12  0   24    // CONSTRUCT1
 0   0   0   0     // ATTACK1
