--- a/main/models/buildables/tesla/animation.cfg
+++ b/main/models/buildables/tesla/animation.cfg
@@ -2,6 +2,7 @@
 8   24  24  24   // IDLE1
 0   0   0   0    // IDLE2
 32  1   1   1    // POWERDOWN
+32  1   1   1    // IDLE_UNPOWERED
 0   8   0   12   // CONSTRUCT1
 0   8   0   12   // CONSTRUCT1
 0   0   0   0    // ATTACK1
