--- a/main/models/buildables/trapper/animation.cfg
+++ b/main/models/buildables/trapper/animation.cfg
@@ -2,6 +2,7 @@
 0   33  33  24  // IDLE1
 0   0   0   0   // IDLE2
 0   0   0   0   // POWERDOWN
+0   0   0   0   // IDLE_UNPOWERED
 41  13  0   24  // CONSTRUCT1
 41  13  0   24  // CONSTRUCT2
 33  8   0   8   // ATTACK1
