--- a/main/sound/buildables/hive/sound.cfg
+++ b/main/sound/buildables/hive/sound.cfg
@@ -1,6 +1,7 @@
 0 0 //idle1.wav
 0 0 //idle2.wav
 0 0 //powerdown.wav
+0 0 //idle_unpowered.wav
 1 0 //construct1.wav
 0 0 //construct2.wav
 0 0 //attack1.wav
