--- a/pkg/unvanquished_src.dpkdir/models/buildables/acid_tube/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/acid_tube/animation.cfg
@@ -2,6 +2,7 @@
 12  1   0   24    // IDLE1
 0   0   0   0     // IDLE2
 0   0   0   0     // POWERDOWN
+0   0   0   0     // IDLE_UNPOWERED
 0   12  0   24    // CONSTRUCT1
 0   12  0   24    // CONSTRUCT2
 13  19  0   24    // ATTACK1
