--- a/pkg/unvanquished_src.dpkdir/models/buildables/arm/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/arm/animation.cfg
@@ -2,6 +2,7 @@
 0   1   1   1      // IDLE1
 0   0   0   0      // IDLE2
 0   0   0   0      // POWERDOWN
+0   0   0   0      // IDLE_UNPOWERED
 0   1   0   1      // CONSTRUCT1
 0   1   0   1      // CONSTRUCT2
 0   0   0   0      // ATTACK1
