--- a/pkg/unvanquished_src.dpkdir/models/buildables/eggpod/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/eggpod/animation.cfg
@@ -2,6 +2,7 @@
 13  24  24  24    // IDLE1
 0   0   0   0     // IDLE2
 0   0   0   0     // POWERDOWN
+0   0   0   0     // IDLE_UNPOWERED
 0   13  0   24    // CONSTRUCT1
 0   13  0   24    // CONSTRUCT1
 0   0   0   0     // ATTACK1
