--- a/pkg/unvanquished_src.dpkdir/models/buildables/medistat/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/medistat/animation.cfg
@@ -2,6 +2,7 @@
 8   19  19  12    // IDLE
 32  1   1   1     // IDLE2-HEAL
 0   1   1   1     // POWERDOWN
+0   1   1   1     // IDLE_UNPOWERED
 0   8   0   24    // CONSTRUCT
 0   8   0   24    // CONSTRUCT
 27  6   0   24    // ATTACK1-HEAL
