--- a/pkg/unvanquished_src.dpkdir/models/buildables/mgturret/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/mgturret/animation.cfg
@@ -2,6 +2,7 @@
 0   1   1   1    // IDLE1
 0   1   1   1    // IDLE2
 0   1   1   1    // POWERDOWN
+0   1   1   1    // IDLE_UNPOWERED
 0   1   0   1    // CONSTRUCT1
 0   1   0   1    // CONSTRUCT1
 1   1   0   10   // ATTACK1
