--- a/pkg/unvanquished_src.dpkdir/models/buildables/overmind/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/overmind/animation.cfg
@@ -2,6 +2,7 @@
 0   33  33  12   // IDLE1
 0   0   0   0    // IDLE2
 0   0   0   0    // POWERDOWN
+0   0   0   0    // IDLE_UNPOWERED
 0   0   0   0    // CONSTRUCT1
 0   0   0   0    // CONSTRUCT1
 43  13  0   24   // ATTACK1
