--- a/pkg/unvanquished_src.dpkdir/models/buildables/telenode/animation.cfg
+++ b/pkg/unvanquished_src.dpkdir/models/buildables/telenode/animation.cfg
@@ -2,6 +2,7 @@
 6   1   1   1     // IDLE1
 0   0   0   0     // IDLE2
 0   0   0   0     // POWERDOWN
+0   0   0   0     // IDLE_UNPOWERED
 0   6   0   24    // CONSTRUCT1
 0   6   0   24    // CONSTRUCT2
 0   0   0   0     // ATTACK1
