Fix directory names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -777,8 +777,8 @@ if( BUILD_CLIENT OR WIN32 )
       set( LIBS_CLIENT ${LIBS_CLIENT} INTERNAL_SDLMain )
     endif()
   else()
-    add_subdirectory( ${${LIB_DIR}/libsdl} ${OBJ_DIR}/libsdl )
-    include_directories( ${${LIB_DIR}/libsdl}/include )
+    add_subdirectory( ${LIB_DIR}/libsdl ${OBJ_DIR}/libsdl )
+    include_directories( ${LIB_DIR}/libsdl/include )
     set( LIBS_CLIENT ${LIBS_CLIENT} INTERNAL_SDL INTERNAL_SDLMain )
     set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_SDL )
     set( LIBS_RENDERERGL ${LIBS_RENDERERGL} INTERNAL_SDL )
@@ -887,8 +887,8 @@ if( WEBP_FOUND )
   include_directories( ${WEBP_INCLUDE_DIRS} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${WEBP_LIBRARIES} )
 else()
-  add_subdirectory( ${${LIB_DIR}/libwebp} ${OBJ_DIR}/libwebp )
-  include_directories( ${${LIB_DIR}/libwebp})
+  add_subdirectory( ${LIB_DIR}/libwebp ${OBJ_DIR}/libwebp )
+  include_directories( ${LIB_DIR}/libwebp )
   set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_WEBP )
 endif()
 
@@ -898,8 +898,8 @@ if( JPEG_FOUND )
   include_directories( ${JPEG_INCLUDE_DIRS} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${JPEG_LIBRARIES} )
 else()
-  add_subdirectory( ${${LIB_DIR}/jpeg} ${OBJ_DIR}/libjpeg )
-  include_directories( ${${LIB_DIR}/jpeg} )
+  add_subdirectory( ${LIB_DIR}/jpeg ${OBJ_DIR}/libjpeg )
+  include_directories( ${LIB_DIR}/jpeg )
   set( LIBSRC_RENDERER ${LIBSRC_RENDERER} ${JPEGLIST} )
 endif()
 
@@ -937,8 +937,8 @@ if( GLEW_FOUND )
   include_directories( ${GLEW_INCLUDE_DIRS} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${GLEW_LIBRARIES} )
 else()
-  add_subdirectory( ${${LIB_DIR}/glew} ${OBJ_DIR}/libglew )
-  include_directories( ${${LIB_DIR}/glew}/include )
+  add_subdirectory( ${LIB_DIR}/glew ${OBJ_DIR}/libglew )
+  include_directories( ${LIB_DIR}/glew/include )
   set( LIBS_RENDERER ${LIBS_RENDERER} INTERNAL_GLEW )
 endif()
 
