--- a/src/libs/glew/CMakeLists.txt
+++ b/src/libs/glew/CMakeLists.txt
@@ -11,7 +11,8 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/${GAMELIB_O
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/MinSizeRel/${GAMELIB_OUTPUT_DIR}" )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/${GAMELIB_OUTPUT_DIR}" )
 
-add_library( INTERNAL_GLEW SHARED ${GLEW_DIR}/src/glew.c )
+add_library( INTERNAL_GLEW SHARED ${LIB_DIR}/glew/src/glew.c )
+
 set_property( TARGET INTERNAL_GLEW PROPERTY COMPILE_DEFINITIONS GLEW_BUILD )
 
 target_link_libraries( INTERNAL_GLEW ${OPENGL_LIBRARIES} )
