--- a/src/libs/libwebp/CMakeLists.txt
+++ b/src/libs/libwebp/CMakeLists.txt
@@ -7,6 +7,8 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/${GAMELIB_O
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/MinSizeRel/${GAMELIB_OUTPUT_DIR}" )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/${GAMELIB_OUTPUT_DIR}" )
 
+set( WEBP_DIR ${LIB_DIR}/libwebp )
+
 set( WEBPLIST
 ${WEBP_DIR}/dsp/lossless.c
 ${WEBP_DIR}/dsp/yuv.c
