Fix some Find* scripts using *_INCLUDE_DIR instead of *_INCLUDE_DIRS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -796,7 +796,7 @@ endif()
 # GMP
 find_package( GMP ${OPTIONAL_WIN32} )
 if( GMP_FOUND )
-  include_directories( ${GMP_INCLUDE_DIRS} )
+  include_directories( ${GMP_INCLUDE_DIR} )
   set( LIBS_ENGINE ${LIBS_ENGINE} ${GMP_LIBRARIES} )
 else()
   include_directories( ${LIB_DIR}/gmp/include )
@@ -810,7 +810,7 @@ endif()
 # Nettle
 find_package( Nettle )
 if( NETTLE_FOUND )
-  include_directories( ${NETTLE_INCLUDE_DIRS} )
+  include_directories( ${NETTLE_INCLUDE_DIR} )
   set( LIBS_ENGINE ${LIBS_ENGINE} ${NETTLE_LIBRARIES} )
 else()
   include_directories( ${LIB_DIR}/nettle )
@@ -821,7 +821,7 @@ endif()
 if( USE_VOIP )
   find_package( Speex )
   if( SPEEX_FOUND )
-    include_directories( ${SPEEX_INCLUDE_DIRS} )
+    include_directories( ${SPEEX_INCLUDE_DIR} )
     set( LIBS_CLIENT ${LIBS_CLIENT} ${SPEEX_LIBRARIES} )
   else()
     include_directories( ${LIB_DIR}/libspeex/include )
@@ -898,7 +898,7 @@ endif()
 # JPEG
 find_package( JPEG )
 if( JPEG_FOUND )
-  include_directories( ${JPEG_INCLUDE_DIRS} )
+  include_directories( ${JPEG_INCLUDE_DIR} )
   set( LIBS_RENDERER ${LIBS_RENDERER} ${JPEG_LIBRARIES} )
 else()
   add_subdirectory( ${LIB_DIR}/jpeg ${OBJ_DIR}/libjpeg )
@@ -947,7 +947,7 @@ endif()
 
 # OpenGL
 find_package( OpenGL REQUIRED )
-include_directories( ${OPENGL_INCLUDE_DIRS} )
+include_directories( ${OPENGL_INCLUDE_DIR} )
 set( LIBS_RENDERER ${LIBS_RENDERER} ${OPENGL_LIBRARIES} )
 
 # X11
@@ -962,7 +962,7 @@ if( USE_OPENAL )
   add_definitions( -DUSE_OPENAL -DUSE_OPENAL_DLOPEN )
   find_package( OpenAL )
   if( OPENAL_FOUND )
-    include_directories( ${OPENAL_INCLUDE_DIRS} )
+    include_directories( ${OPENAL_INCLUDE_DIR} )
   else()
     include_directories( ${LIB_DIR}/openal/include )
   endif()
