Use 12 component matrices for vertex skinning
This reduces the number of uniforms we have to use in the vertex shader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -489,6 +489,8 @@ set( RENDERERLIST
   ${MOUNT_DIR}/engine/renderer/tr_local.h
   ${MOUNT_DIR}/engine/renderer/tr_types.h
   ${MOUNT_DIR}/engine/renderer/tr_public.h
+  ${MOUNT_DIR}/engine/renderer/tr_bonematrix.h
+  ${MOUNT_DIR}/engine/renderer/tr_bonematrix.c
   ${MOUNT_DIR}/engine/renderer/anorms256.h
 )
 
@@ -538,6 +540,8 @@ set( RENDERERGLLIST
   ${MOUNT_DIR}/engine/qcommon/md4.c
   ${MOUNT_DIR}/engine/rendererGL/tr_local.h
   ${MOUNT_DIR}/engine/renderer/tr_public.h
+  ${MOUNT_DIR}/engine/renderer/tr_bonematrix.h
+  ${MOUNT_DIR}/engine/renderer/tr_bonematrix.c
   ${MOUNT_DIR}/engine/rendererGL/gl_shader.h
   ${MOUNT_DIR}/engine/rendererGL/tr_image.h
   ${MOUNT_DIR}/engine/rendererGL/tr_model_skel.h
