Update configs & shaders for new models.
Also, split up the old reactor shader file, creating separate files for the
armoury and the repeater.

--- a/main/configs/buildables/reactor.model.cfg
+++ b/main/configs/buildables/reactor.model.cfg
@@ -1,7 +1,8 @@
 model       0 models/buildables/reactor/reactor.md3
-mins        -41 -41 -15
-maxs        41 41 95
-zOffset     -2.0
-modelScale  0.85
+modelScale  1.3
+mins        -41 -41 -4
+maxs        41 41 100
+zOffset     -4.0
 oldScale    0.85
 oldOffset   -2.0
+//old maxs 41 41 95
