--- a/pkg/unvanquished_src.dpkdir/configs/buildables/medistat.model.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/medistat.model.cfg
@@ -1,7 +1,22 @@
 model       0 models/buildables/medistat/medistat.md3
-modelScale  1.0
+modelScale  5.75
 mins        -35 -35 -7
 maxs        35 35 2
-zOffset     0
+zOffset     -3.716796875 // -3.75+1/32+1/512 // -3.675 [5.25]
+
 oldScale    1.0
 oldOffset   0
+
+/*
+animate default {
+	bone BoneActiveTop rotate 0 15 0 constant
+}
+
+animate idle3 {
+	bone BoneActiveTop rotate 0 15 0 accelerate 0 -15 0 time 1s
+}
+
+animate destroy {
+	bone BoneActiveTop rotate 0 0 0 constant
+}
+*/
